# ict-spec

./: pyproject.toml  schema.json  spec.md
src/ict/: __init__.py  model.py
src/ict/hardware/: __init__.py
src/ict/io/: objects.py
src/ict/metadata/: objects.py
src/ict/semver/: __init__.py  semver.py
src/ict/tools/: __init__.py  cwl_ict.py
src/ict/ui/: objects.py
src/ict/wipp_utils/: __init__.py  hardware.py  io.py  metadata.py  ui.py
tests/: test_version.py
